--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "axios": "^1.6.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "crisp-sdk-web": "^1.0.21",
     "lucide-react": "^0.292.0",
     "next": "14.0.1",
     "openai": "^4.15.0",
@@ -29,6 +30,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.47.0",
+    "react-hot-toast": "^2.4.1",
     "react-markdown": "^9.0.0",
     "replicate": "^0.20.1",
     "stripe": "^14.3.0",
